--- a/Grocery Web/css/style.css
+++ b/Grocery Web/css/style.css
@@ -1,15 +1,16 @@
 /* Header Section*/
 body{ background-color: #008000;
-width: fit-content;}
+width: 100%;}
 #HeaderNavigasi 
 { display: flex;
   justify-content: space-between;
+  width: 91%;
+  margin-left: 1%;
 
   padding: 20px ;
   background-color:#a52a2a;
   border-radius: 20px;
-  border: 4px ridge black;
-  width: 96%;}
+  border: 4px ridge black;}
 
 #Navigasi 
 { display: flex;
@@ -68,31 +69,31 @@ transition: 0.3s;}
 
 #Panggilan_Biase 
 {display: flex;
-  padding: 20px;
-  margin-left: 100px;
-  width: fit-content;
-  height: fit-content;
-gap: 50px;
+  flex: 1;
+  margin-left: 20%;
+  width: 60%;
+  height: 100%;
+gap: 200px;
 margin-top: 5% ;
+border-radius:2px;
 box-sizing: border-box;}
 
 
-
-article {
-    display: flex;
-    flex: 1;
-    height: 40%;
-    width: 60% ;
-    flex-direction: column;
-    text-align: center;
-    flex-basis: 2%;
-    padding: 1%;
-    border-radius: 20px;
-    font-size: 30px;
-    justify-content: center;
-    border: 2px solid black;
-    background-color: brown;
-    }
+article > #Panggilan_Biase {
+  display: flex;
+  flex: 1;
+  height: 100%;
+  width: 100% ;
+  flex-direction: column;
+  text-align: center;
+  flex-basis: 0%;
+  padding: 1%;
+  border-radius: 20px;
+  font-size: 30px;
+  justify-content: center;
+  border: 2px solid black;
+  background-color: brown;
+  }
 
 #Article {background-color: rgb(0, 0, 0);}
 
@@ -111,7 +112,7 @@ article {
         border : 2px solid black;
         border-radius: 20px;
         height: 30%;
-        width: 35%;
+        width: 20%;
         justify-content:start;
         align-items: flex-start;
         padding: 50px;
@@ -142,18 +143,26 @@ font-size: 30px;}
   
 section {margin-top: 0px;}
 
-.Foto { display: flex;
-        height: 10%;
+.Foto-SlideShow { display: flex;
+        height: 20%;
         align-items: center ;
         justify-content: center;
-      width: 100%;}
+      width: 50%;
+      animation: fading 10s infinite;}
+
+
 
   /* Isi komen */
   .KOMEN {  display: flex;
-    width: 600px;
+    flex-direction: column;
+    width: fit-content;
     background-color:azure;
-    margin-left: 0%;
-    ;}
+    align-content: center;
+    border: 1px solid black;
+    border-radius: 20px ;
+    width: 705px;
+    margin-left: 43px ;
+    margin-bottom: 2%;}
 
   #isi_komen { 
     display: flex;
@@ -161,7 +170,7 @@ section {margin-top: 0px;}
     color: black;
     font-size: 15px;
     justify-content: start;
-    margin-right: 5%;}
+    margin-left: 4%;}
     #Pelanggan 
     { font-display: flex;  
       color: black;
@@ -176,13 +185,15 @@ section {margin-top: 0px;}
     align-items: center;}
 
     #gambar {width: 60px;
-    height: 50px;}
+    height: 50px;
+    margin-left: 4%;}
 
   /*Information*/
 
   #Information_list {
     width: 600px;
     display: flex;
+    flex-direction: column;
     background-color: white;
     margin-left: 10%; 
     margin-top: 10%; 
@@ -236,3 +247,20 @@ section {margin-top: 0px;}
  #Inggris:hover { opacity: 1;
    background-color: rgba(245, 245, 245, 0.921);
                                       color: rgb(240, 16, 16);}
+
+.Closing-Argument { display: flex;
+flex-direction: column;}
+
+/*Footer section*/
+
+#CS { background-color: #a52a2a;
+      color: black;
+      text-align: center;
+      margin-left: 45%;
+      margin-right: 45%;
+      font-size: 40px;
+      border-radius: 10px;
+      transition: 0.3s;}
+
+#CS:hover {opacity: 1;
+            background-color: white; }
